--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-amber.min.css" />
-<script src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script> -->
 <script src="script.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="shortcut icon" href="fsoc.png">
-<!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
+<!-- <link rel="shortcut icon" href="fsoc.png">-->
 <title>Hello friend!</title>
 </head>
 
