--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="script.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
-<!-- <link rel="shortcut icon" href="fsoc.png">-->
+<link rel="shortcut icon" href="fsoc.png">
 <title>Hello friend!</title>
 </head>
 
